# startkladde

./: .gitignore  BUILD.md  BUILD_LINUX.md  BUILD_WIN.md  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_LINUX.md  DEPLOYMENT_WIN.md  README.md  startkladde.pro
cmake/: FindAcpi.cmake  FindMySQL.cmake  cmake_uninstall.cmake.in  generateSvnHeader.cmake
config/: startkladde.desktop  startkladde.qrc  startkladde.rc
config/mkspecs/win32-cross-mingw/: qmake.conf
debian/: Dockerfile  README.md  control.template  docker-compose.yml  install-build-packages.sh  install-deploy-packages.sh  make-debian-package-docker.sh  make-debian-package.sh  sign-repo.sh  sign_repo.sh
doc/: TODO.txt  changelog.txt  description.txt  features.txt  i18n.txt  install.txt  shell_plugins.txt  stammdaten.txt
doc/bedienungsanleitung/: Makefile  flarm-hardware.odt  startkladde_bedienungsanleitung.tex
doc/internal/: databaseArchitecture.txt  databaseErrors.txt  databaseMigrations.txt  databaseOpen.txt  database_connection.txt  factoryPatterns.txt  gui.txt  importing.txt  keyboard_shortcuts.txt  logo.txt  migrations.txt  mysql.txt  options.txt  release-checklist.txt  release.txt  tests.txt  worker.txt
doc/uml/: MainWindow.xmi  database.xmi  objectList.xmi
graphics/: logo.txt
plugins/info/: metar.rb  pwd.rb  sunset_common.rb  sunset_countdown.rb  sunset_time.rb  sunsets.txt  test_richtext.rb  test_varlen.rb  wind.rb
plugins/weather/: regenradar_wetteronline.de.rb  regenradar_wetteronline.de_animation.rb  weather_common.rb
script/: count_lines  find_missing_tr  flarm_mover.rb  generate_migration.rb  lupdate.bat  mock.rb  netztest  netztest_xterm  nmea.rb  sk.bat  update_current_schema.sh
script/client/: init-startkladde  readme.txt  serial_send.rb  serialhandler.py  startkladde-down  startkladde-up  startkladde_wrapper
src/: FlightReference.cpp  FlightReference.h  Longitude.cpp  Longitude.h  StorableException.cpp  StorableException.h  accessor.h  build.h.in  flightColor.cpp  flightColor.h  itemDataRoles.h  startkladde.cpp  text.cpp  text.h  version.cpp  version.h
src/algorithms/: RectangleLayout.cpp  RectangleLayout.h
src/concurrent/: DefaultQThread.cpp  DefaultQThread.h  Returner.cpp  Returner.h  Waiter.cpp  Waiter.h  synchronized.cpp  synchronized.h  threadUtil.cpp  threadUtil.h
src/concurrent/monitor/: OperationCanceledException.cpp  OperationCanceledException.h  OperationMonitor.cpp  OperationMonitor.h  OperationMonitorInterface.cpp  OperationMonitorInterface.h  SignalOperationMonitor.cpp  SignalOperationMonitor.h  SimpleOperationMonitor.cpp  SimpleOperationMonitor.h
src/config/: Settings.cpp  Settings.h
src/container/: Maybe.h  SkMultiHash.h  SortedSet.h  SortedSet_impl.h
src/data/: Csv.cpp  Csv.h  TabularTextDocument.cpp  TabularTextDocument.h
src/db/: Database.cpp  Database.h  DatabaseInfo.cpp  DatabaseInfo.h  DbManager.cpp  DbManager.h  DbSync.cpp  DbSync.h  DbWorker.cpp  DbWorker.h  Query.cpp  Query.h  dbId.cpp  dbId.h
src/db/cache/: Cache.cpp  Cache.h  CacheWorker.cpp  CacheWorker.h  Cache_hashUpdates.cpp  Cache_lookup.cpp
src/db/event/: DbEvent.cpp  DbEvent.h  DbEventMonitor.cpp  DbEventMonitor.h
src/db/interface/: AbstractInterface.cpp  AbstractInterface.h  DefaultInterface.cpp  DefaultInterface.h  Interface.cpp  Interface.h  InterfaceWorker.cpp  InterfaceWorker.h  ThreadSafeInterface.cpp  ThreadSafeInterface.h
src/db/migration/: Migration.cpp  Migration.h  MigrationBuilder.h  MigrationFactory.cpp  MigrationFactory.h  (+4 more)
src/flarm/: Flarm.cpp  Flarm.h  FlarmList.cpp  FlarmList.h  FlarmRecord.cpp  FlarmRecord.h  FlarmRecordModel.cpp  FlarmRecordModel.h  FlarmWindow.cpp  FlarmWindow.h  FlarmWindow.ui
src/graphics/: SkMovie.cpp  SkMovie.h  grid.cpp  grid.h
src/gui/: CompletionLineEdit.cpp  CompletionLineEdit.h  PasswordCheck.cpp  PasswordCheck.h  PasswordPermission.cpp  PasswordPermission.h  PlaneCompleter.cpp  PlaneCompleter.h  SkCompleter.cpp  SkCompleter.h  SkDialog.h  SkMainWindow.h  Trainingsbarometer.cpp  Trainingsbarometer.h  WidgetFader.cpp  WidgetFader.h  dialogs.cpp  dialogs.h
src/i18n/: LanguageChangeNotifier.cpp  LanguageChangeNotifier.h  LanguageConfiguration.cpp  LanguageConfiguration.h  TranslationManager.cpp  TranslationManager.h  notr.h
src/io/: AnsiColors.cpp  AnsiColors.h  SkProcess.cpp  SkProcess.h  TempDir.cpp  TempDir.h  colors.h  console.cpp  console.h
src/logging/: messages.cpp  messages.h
src/model/: Entity.cpp  Entity.h  Flight.cpp  Flight.h  FlightBase.cpp  FlightBase.h  Flight_Mode.cpp  Flight_Type.cpp  LaunchMethod.cpp  LaunchMethod.h  Person.cpp  Person.h  PersonModel.cpp  PersonModel.h  Plane.cpp  Plane.h
src/net/: Downloader.cpp  Downloader.h  Network.cpp  Network.h  TcpProxy.cpp  TcpProxy.h
src/nmea/: GprmcSentence.cpp  GprmcSentence.h  GpsTracker.cpp  GpsTracker.h  Nmea.cpp  Nmea.h  NmeaDecoder.cpp  NmeaDecoder.h  NmeaSentence.cpp  NmeaSentence.h  PflaaSentence.cpp  PflaaSentence.h
src/numeric/: Angle.cpp  Angle.h  Distance.cpp  Distance.h  GeoPosition.cpp  GeoPosition.h  Scientific.cpp  Scientific.h  Velocity.cpp  Velocity.h  numeric.cpp  numeric.h
src/plugin/: Plugin.cpp  Plugin.h
src/qwt/: SkPlotMagnifier.cpp  SkPlotMagnifier.h  SkPlotPanner.cpp  SkPlotPanner.h
src/statistics/: LaunchMethodStatistics.cpp  LaunchMethodStatistics.h  PilotLog.cpp  PilotLog.h  PlaneLog.cpp  PlaneLog.h
src/time/: EventTimeTracker.cpp  EventTimeTracker.h
src/util/: DestructionMonitor.cpp  DestructionMonitor.h  WithSortkey.h  bool.cpp  bool.h  color.cpp  color.h  double.cpp  double.h  environment.cpp  environment.h  file.cpp  file.h  fileSystem.cpp  fileSystem.h  io.cpp  io.h  math.h  qDate.cpp  qDate.h  qHash.cpp  qHash.h  qList.h  qMargins.cpp  qMargins.h  qPainter.cpp  qPainter.h  qPointF.cpp  qPointF.h  qRect.cpp  qRect.h  qRectF.cpp  qRectF.h  qSize.cpp  qSize.h  qString.cpp  qString.h  qTime.cpp  qTime.h  qTimer.cpp  (+7 more)
test/: TestRunnerClient.cpp  TestRunnerClient.h  mock_test.ts  test.ts  textTest.cpp  textTest.h
translations/: startkladde_bork.qm  startkladde_bork.ts  startkladde_de.qm  startkladde_de.ts
(+304 files in other folders)
